samples/_failures_safe/1761001901_df64d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_071f5a0f.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_071f5a0f.c:179:22: error: expected ‘;’ at end of input
  179 |     for (int i = 0; i
      |                      ^
      |                      ;
./samples/SAFE/__tmp_071f5a0f.c:179:5: error: expected declaration or statement at end of input
  179 |     for (int i = 0; i
      |     ^~~
